// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Webhook Example should generate complete TypeScript output for webhook-only spec: webhook-complete-output 1`] = `
"import { z } from "zod";
import type { OperationDefinition, OperationErrors } from "zenko";

// Generated Zod Schemas

export const Pet = z.object({
  id: z.number().int(),
  name: z.string(),
  tag: z.string().optional(),
});

export type Pet = z.infer<typeof Pet>;

// Path Functions
export const paths = {
  newPet: () => "newPet",
} as const;

// Header Schemas
export const headerSchemas = {
  newPet: z.object({}),
} as const;

// Header Functions
export const headers = {
  newPet: () => headerSchemas.newPet.parse({}),
} as const;

// Operation Types
export type NewPetOperation = OperationDefinition<
  "post",
  typeof paths.newPet,
  typeof Pet,
  undefined,
  undefined,
  OperationErrors
>;

// Operation Objects
export const newPet: NewPetOperation = {
  method: "post",
  path: paths.newPet,
  request: Pet,
} as const;
"
`;

exports[`Webhook Example should handle mixed paths and webhooks: webhook-mixed-output 1`] = `
"import { z } from "zod";
import type { OperationDefinition, OperationErrors } from "zenko";

// Generated Zod Schemas

export const Pet = z.object({
  id: z.number().int(),
  name: z.string(),
  tag: z.string().optional(),
});

export type Pet = z.infer<typeof Pet>;

// Path Functions
export const paths = {
  listPets: () => "/pets",
  newPet: () => "newPet",
} as const;

// Header Schemas
export const headerSchemas = {
  listPets: z.object({}),
  newPet: z.object({}),
} as const;

// Header Functions
export const headers = {
  listPets: () => headerSchemas.listPets.parse({}),
  newPet: () => headerSchemas.newPet.parse({}),
} as const;

// Generated Response Types

export const ListPetsResponse = z.array(Pet);

export type ListPetsResponse = z.infer<typeof ListPetsResponse>;

// Operation Types
export type ListPetsOperation = OperationDefinition<
  "get",
  typeof paths.listPets,
  undefined,
  z.ZodArray<typeof Pet>,
  undefined,
  OperationErrors
>;

export type NewPetOperation = OperationDefinition<
  "post",
  typeof paths.newPet,
  typeof Pet,
  undefined,
  undefined,
  OperationErrors
>;

// Operation Objects
export const listPets: ListPetsOperation = {
  method: "get",
  path: paths.listPets,
  response: z.array(Pet),
} as const;

export const newPet: NewPetOperation = {
  method: "post",
  path: paths.newPet,
  request: Pet,
} as const;
"
`;
